--- a/Mp3/MainWindow.xaml
+++ b/Mp3/MainWindow.xaml
@@ -1,12 +1,203 @@
-﻿<Window x:Class="Mp3.MainWindow"
+﻿<Window x:Name="FormMp3" x:Class="Mp3.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mp3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MP3 player Amar" Height="720" Width="600"
+        Icon="Ressource/Label.png"
+        Background="Black"
+        ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen" Foreground="#FF8ED9F6" BorderBrush="#FF77B4CC">
+    <Window.Resources>
+        <Style x:Key="BtnTemplate" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" BorderThickness="0" BorderBrush="Black" Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Opacity" Value="0.8" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Image x:Key="Play" Source="Ressource\btnPlay.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="60" Height="60" Cursor="Hand"/>
+        <Image x:Key="Pause" Source="Ressource\btnPause.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="60" Height="60" Cursor="Hand"/>
+        <Image x:Key="Sound" Source="Ressource\btnSound.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="25" Height="25" Cursor="Hand"/>
+        <Image x:Key="Mute" Source="Ressource\BtnMute.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="25" Height="25" Cursor="Hand"/>
+        <Image x:Key="Loopa" Source="Ressource\btnLoopa.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" Height="40" Cursor="Hand"/>
+        <Image x:Key="Loopb" Source="Ressource\btnLoopb.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" Height="40" Cursor="Hand"/>
+        <Image x:Key="Randoma" Source="Ressource\btnRandoma.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" Height="40" Cursor="Hand"/>
+        <Image x:Key="Randomb" Source="Ressource\btnRandomb.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" Height="40" Cursor="Hand"/>
+        <Image x:Key="Next" Source="Ressource\btnNext.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="60" Height="60" Cursor="Hand"/>
+        <Image x:Key="Previous" Source="Ressource\btnPrevious.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="60" Height="60" Cursor="Hand"/>
+
+        <Style x:Key="SpeedFocusVisualStyte">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle x:Name="FocusStyle" 
+                           StrokeDashArray="4 4"
+                           RadiusX="10"
+                           RadiusY="10" 
+                           Fill="Transparent"
+                           Stroke="#99029cc7" 
+                           StrokeThickness="1" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SpeedSliderThumbStyle" TargetType="{x:Type Thumb}">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Thumb}">
+                        <Grid>
+                            <Border Name="outerBorder"
+                            Height="18"
+                            Width="18"
+                            Opacity="1" 
+                            BorderThickness="2"
+                            CornerRadius="20"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="True">
+                                <Setter TargetName="outerBorder" Property="Background" Value="Gray"/>
+                                <Setter TargetName="outerBorder" Property="BorderBrush" Value="#FF8ED9F6"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="outerBorder" Property="Background" Value="#FF8ED9F6"/>
+                                <Setter TargetName="outerBorder" Property="BorderBrush" Value="Gray"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="outerBorder" Property="Background" Value="{DynamicResource ApplicationTitleBarColor}"/>
+                                <Setter TargetName="outerBorder" Property="BorderBrush" Value="{DynamicResource ApplicationTitleBarColor}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SpeedSliderRepeatButtonStyle" TargetType="{x:Type RepeatButton}">
+            <Setter Property="OverridesDefaultStyle" Value="true"/>
+            <Setter Property="IsTabStop" Value="false"/>
+            <Setter Property="Focusable" Value="false"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type RepeatButton}">
+                        <Rectangle Fill="Transparent"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <ControlTemplate x:Key="HorizontalSlider" TargetType="{x:Type Slider}">
+            <Grid Margin="5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" MinHeight="{TemplateBinding MinHeight}"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TickBar x:Name="TopTick" Visibility="Collapsed" Fill="#FF8ED9F6" Placement="Top" SnapsToDevicePixels="True"
+             Height="2" Margin="0,0,0,2" />
+                <Border x:Name="TrackBackground"
+                Grid.Row="1"
+                Margin="10,0"
+                BorderThickness="2"
+                BorderBrush="{DynamicResource LabelDisableForegroundColor}"
+                VerticalAlignment="Center" 
+                Height="1" />
+                <Track x:Name="PART_Track" Grid.Row="1">
+                    <Track.DecreaseRepeatButton>
+                        <RepeatButton Command="{x:Static Slider.DecreaseLarge}"  Style="{StaticResource SpeedSliderRepeatButtonStyle}" />
+                    </Track.DecreaseRepeatButton>
+                    <Track.IncreaseRepeatButton>
+                        <RepeatButton Command="{x:Static Slider.IncreaseLarge}" Style="{StaticResource SpeedSliderRepeatButtonStyle}"/>
+                    </Track.IncreaseRepeatButton>
+                    <Track.Thumb>
+                        <Thumb x:Name="Thumb" Style="{StaticResource SpeedSliderThumbStyle}"/>
+                    </Track.Thumb>
+                </Track>
+                <TickBar x:Name="BottomTick" Grid.Row="2" Visibility="Collapsed" Fill="#FF8ED9F6" Placement="Bottom"
+             SnapsToDevicePixels="True" Height="2" Margin="0,2,0,0"/>
+            </Grid>
+            <ControlTemplate.Triggers>
+                <Trigger Property="TickPlacement" Value="TopLeft">
+                    <Setter TargetName="TopTick" Property="Visibility" Value="Visible" />
+                </Trigger>
+                <Trigger Property="TickPlacement" Value="BottomRight">
+                    <Setter TargetName="BottomTick" Property="Visibility" Value="Visible" />
+                </Trigger>
+                <Trigger Property="TickPlacement" Value="Both">
+                    <Setter TargetName="TopTick" Property="Visibility" Value="Visible" />
+                    <Setter TargetName="BottomTick" Property="Visibility" Value="Visible" />
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="false">
+                    <Setter TargetName="TrackBackground" Property="BorderBrush" Value="{DynamicResource ListViewItemBorderBrushColor}"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
         
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="218*"/>
+            <RowDefinition Height="67*"/>
+        </Grid.RowDefinitions>
+        <Button Name="BtnPlay" Margin="0,0,0,20" Click="BtnPlay_Click" Background="Transparent" BorderBrush="Transparent" VerticalAlignment="Bottom" Height="70" Grid.Row="1" Style="{StaticResource BtnTemplate}" Width="70">
+            <DynamicResource ResourceKey="Play"/>
+        </Button>
+        <Button Name="BtnNext" Margin="250,0,0,20" Background="Transparent" BorderBrush="Transparent" VerticalAlignment="Bottom" Height="70" Grid.Row="1" Style="{StaticResource BtnTemplate}" Width="70" Click="BtnNext_Click">
+            <DynamicResource ResourceKey="Next"/>
+        </Button>
+        <Button Name="BtnPrevious" Margin="0,0,250,20" Background="Transparent" BorderBrush="Transparent" VerticalAlignment="Bottom" Height="70" Grid.Row="1" Style="{StaticResource BtnTemplate}" Width="70" Click="BtnPrevious_Click">
+            <DynamicResource ResourceKey="Previous"/>
+        </Button>
+        <Button Name="BtnLoop" Margin="20,0,0,30" Click="BtnLoop_Click" Background="Transparent" BorderBrush="Transparent" VerticalAlignment="Bottom" Height="50" Grid.Row="1" Style="{StaticResource BtnTemplate}" HorizontalAlignment="Left" Width="50">
+            <DynamicResource ResourceKey="Loopa"/>
+        </Button>
+        <Button Name="BtnRandom" Margin="0,0,20,30" Background="Transparent" BorderBrush="Transparent" VerticalAlignment="Bottom" Height="50" Grid.Row="1" Style="{StaticResource BtnTemplate}" HorizontalAlignment="Right" Width="50" Click="BtnRandom_Click">
+            <DynamicResource ResourceKey="Randoma"/>
+        </Button>
+        <DockPanel Margin="0,0,-0.4,0.4" Grid.RowSpan="2">
+            <Menu DockPanel.Dock="Top" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Background="Transparent" BorderBrush="Transparent" FontSize="22" Foreground="#FF8ED9F6">
+                <MenuItem Header="Liste de lecture" Name="BtnPlaylist" Height="30" Width="180" Click="BtnPlaylist_Click" Cursor="Hand" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
+                <Button Name="BtnSound" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="25" Width="25" Click="BtnSound_Click" Style="{StaticResource BtnTemplate}">
+                    <DynamicResource ResourceKey="Sound"/>
+                </Button>
+                <Slider x:Name="SliderSon" Width="285" RenderTransformOrigin="0.5,0.5" FontSize="16" Cursor="Hand" Maximum="100" BorderBrush="#FFA60F0F" Foreground="#FF9A0606" ValueChanged="SliderSon_ValueChanged" SmallChange="1" LargeChange="10" Height="23" IsMoveToPointEnabled="True">
+                    <Slider.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleY="-1"/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Slider.RenderTransform>
+                </Slider>
+            </Menu>
+            <Label Name="LbSon" Content="100" Width="40" Background="Transparent" BorderBrush="Transparent" FontSize="16"  Foreground="#FF8ED9F6" Margin="540,-30,0,0" Height="30" VerticalAlignment="Top"/>
+            <TextBlock x:Name="tbNom" Text="" TextWrapping="WrapWithOverflow" FontSize="20" TextAlignment="Center" Margin="-573,0,0,195" Width="570" Height="70" VerticalAlignment="Bottom" Foreground="#FF8ED9F6"/>
+            <Slider x:Name="SliderMusique" Width="565" FontSize="20" Cursor="Hand" Maximum="100" BorderBrush="#FF77B4CC" Foreground="#FF8ED9F6" SmallChange="1" LargeChange="10" Margin="-573,0,0,149.6" Height="40" VerticalAlignment="Bottom" TickPlacement="Both" TickFrequency="0" IsMoveToPointEnabled="True" ValueChanged="SliderMusique_ValueChanged" Template="{StaticResource HorizontalSlider}"/>
+            <Label Name="LbDuration" Content="00:00 / 00:00" Height="30" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="-570,0,0,110" Width="105" Background="Transparent" BorderBrush="Transparent" FontSize="16" Foreground="#FF8ED9F6"/>
+            <DataGrid Name="DgPlaylist" Height="349" VerticalAlignment="Top" Background="Transparent" Foreground="#FF8ED9F6" BorderBrush="Transparent" Width="585" Margin="-580,34.6,0,0">
+                <DataGrid.Resources>
+                    <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="Background" Value="Transparent" />
+                    </Style>
+                </DataGrid.Resources>
+            </DataGrid>
+        </DockPanel>
     </Grid>
 </Window>
