--- a/Mp3/MainWindow.xaml
+++ b/Mp3/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Mp3"
         mc:Ignorable="d"
         Title="MP3 player Amar" Height="750" Width="600"
-        Icon="Ressource/Label.png"
+        Icon="Ressource\Label.ico"
         Background="Black"
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen" Foreground="#FF8ED9F6" BorderBrush="#FF77B4CC"
@@ -43,6 +43,7 @@
         <Image x:Key="Next" Source="Ressource\btnNext.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="60" Height="60" Cursor="Hand"/>
         <Image x:Key="Previous" Source="Ressource\btnPrevious.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="60" Height="60" Cursor="Hand"/>
         <Image x:Key="Cancel" Source="Ressource\BtnCancel.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="25" Height="25" Cursor="Hand"/>
+        <Image x:Key="Refresh" Source="Ressource\BtnRefresh.png" Stretch="Uniform"  VerticalAlignment="Center" HorizontalAlignment="Left" Width="25" Height="25" Cursor="Hand"/>
 
         <Style x:Key="SpeedFocusVisualStyte">
             <Setter Property="Control.Template">
@@ -179,7 +180,10 @@
 
         <DockPanel Margin="0,0,-0.4,0.4" Grid.RowSpan="2">
             <Menu DockPanel.Dock="Top" HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Background="Transparent" BorderBrush="Transparent" FontSize="22" Foreground="#FF8ED9F6">
-                <MenuItem Header="Liste de lecture" Name="BtnPlaylist" Height="30" Width="180" Click="BtnPlaylist_Click" Cursor="Hand" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
+                <MenuItem Header="Liste de lecture" Name="BtnPlaylist" Height="30" Width="160" Click="BtnPlaylist_Click" Cursor="Hand" Margin="0,0,10,0" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
+                <Button Name="BtnRefresh" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="25" Width="25" Click="BtnRefresh_Click" Style="{StaticResource BtnTemplate}">
+                    <DynamicResource ResourceKey="Refresh"/>
+                </Button>
                 <Button Name="BtnSound" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="25" Width="25" Click="BtnSound_Click" Style="{StaticResource BtnTemplate}">
                     <DynamicResource ResourceKey="Sound"/>
                 </Button>
@@ -194,14 +198,14 @@
                     </Slider.RenderTransform>
                 </Slider>
             </Menu>
-            <Label Name="LbSon" Content="100" Width="40" Background="Transparent" BorderBrush="Transparent" FontSize="16"  Foreground="#FF8ED9F6" Margin="540,-30,0,0" Height="30" VerticalAlignment="Top"/>
-            <Label Name="LbPlaylist" Content="" Margin="-575,15,5,640" Height="30" Background="Transparent" BorderBrush="Transparent" FontSize="14"  Foreground="#FF8ED9F6" VerticalAlignment="Top" MinWidth="300" MinHeight="30" HorizontalAlignment="Left"/>
-            <TextBox Name="tbRecherche" SelectionBrush="Gray" CaretBrush="Gray" BorderThickness="1 1 1 1" BorderBrush="#FF8ED9F6" Margin="-230,15,0,0" Background="Transparent" TextWrapping="NoWrap" FontSize="14"  Foreground="#FF8ED9F6" Width="200" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" TextAlignment="Left" TextChanged="tbRecherche_TextChanged"/>
-            <Image Name="ISearch" Source="Ressource\IconSearch.png"  Margin="-500,15,0,0" Width="25" Height="25" VerticalAlignment="Top"/>
-            <TextBlock x:Name="tbNom" Text="" TextWrapping="WrapWithOverflow" FontSize="24" TextAlignment="Center" Margin="-569,0,0,195" Width="570" Height="65" VerticalAlignment="Bottom" Foreground="#FF8ED9F6"/>
-            <Slider x:Name="SliderMusique" Width="565" Height="40" FontSize="20" Cursor="Hand" Maximum="100" BorderBrush="#FF77B4CC" Foreground="#FF8ED9F6" SmallChange="1" LargeChange="10" Margin="-568,500,0,150" TickPlacement="Both" TickFrequency="0" IsMoveToPointEnabled="True" ValueChanged="SliderMusique_ValueChanged" Template="{StaticResource HorizontalSlider}"/>
-            <Label Name="LbDuration" Content="00:00 / 00:00" Height="30" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="-570,0,0,105" Width="105" Background="Transparent" BorderBrush="Transparent" FontSize="16" Foreground="#FF8ED9F6"/>
-            <DataGrid Name="DgPlaylist" Height="350" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Center" Background="Transparent" Foreground="#FF8ED9F6" BorderBrush="Transparent" Width="585" Margin="-580,50,0,0" RowHeight="30" RowBackground="Transparent" IsReadOnly="True" CanUserAddRows="false" ColumnHeaderHeight="25" AutoGenerateColumns="False" HeadersVisibility="Column" MouseDoubleClick="DgPlaylist_MouseDoubleClick">
+            <Label Name="LbSon" Content="100" Width="40" Background="Transparent" BorderBrush="Transparent" FontSize="16"  Foreground="#FF8ED9F6" Margin="545,-30,0,0" Height="30" VerticalAlignment="Top"/>
+            <Label Name="LbPlaylist" Content="" Margin="-580,15,5,640" Height="30" Background="Transparent" BorderBrush="Transparent" FontSize="14"  Foreground="#FF8ED9F6" VerticalAlignment="Top" MinWidth="300" MinHeight="30" HorizontalAlignment="Left"/>
+            <TextBox Name="tbRecherche" SelectionBrush="Gray" CaretBrush="Gray" BorderThickness="1 1 1 1" BorderBrush="#FF8ED9F6" Margin="-235,15,0,0" Background="Transparent" TextWrapping="NoWrap" FontSize="14"  Foreground="#FF8ED9F6" Width="200" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" TextAlignment="Left" TextChanged="tbRecherche_TextChanged"/>
+            <Image Name="ISearch" Source="Ressource\IconSearch.png"  Margin="-510,15,0,0" Width="25" Height="25" VerticalAlignment="Top"/>
+            <TextBlock x:Name="tbNom" Text="" TextWrapping="WrapWithOverflow" FontSize="24" TextAlignment="Center" Margin="-577,0,0,195" Width="570" Height="65" VerticalAlignment="Bottom" Foreground="#FF8ED9F6"/>
+            <Slider x:Name="SliderMusique" Width="565" Height="40" FontSize="20" Cursor="Hand" Maximum="100" BorderBrush="#FF77B4CC" Foreground="#FF8ED9F6" SmallChange="1" LargeChange="10" Margin="-575,500,0,150" TickPlacement="Both" TickFrequency="0" IsMoveToPointEnabled="True" ValueChanged="SliderMusique_ValueChanged" Template="{StaticResource HorizontalSlider}"/>
+            <Label Name="LbDuration" Content="00:00 / 00:00" Height="30" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="-575,0,0,105" Width="105" Background="Transparent" BorderBrush="Transparent" FontSize="16" Foreground="#FF8ED9F6"/>
+            <DataGrid Name="DgPlaylist" Height="350" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Center" Background="Transparent" Foreground="#FF8ED9F6" BorderBrush="Transparent" Width="585" Margin="-585,50,0,0" RowHeight="30" RowBackground="Transparent" IsReadOnly="True" CanUserAddRows="false" ColumnHeaderHeight="25" AutoGenerateColumns="False" HeadersVisibility="Column" MouseDoubleClick="DgPlaylist_MouseDoubleClick">
                 <DataGrid.Resources>
                     <Style BasedOn="{StaticResource {x:Type DataGridColumnHeader}}" TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="Background" Value="Transparent" />
@@ -217,7 +221,7 @@
                         <Setter Property="Background" Value="Transparent"/>
                     </Style>
                     <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="Transparent"/>
-                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightSlateGray"/>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Musique" Width="*" Foreground="#FF8ED9F6" Binding="{Binding Musique}"/>
